Remove mdc remains