@@ -52,8 +52,6 @@
       --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
       --add-exports com.azure.core/com.azure.core.implementation.serializer=ALL-UNNAMED
       --add-exports com.azure.core/com.azure.core.implementation.jackson=ALL-UNNAMED
-      --add-exports com.azure.core/org.slf4j.impl=org.slf4j
-
 
       --add-opens com.azure.core/com.azure.core=ALL-UNNAMED
       --add-opens com.azure.core/com.azure.core.credential=ALL-UNNAMED
